--- a/rhb registration/Controllers/Pre Registration Screen/RHBPreRegisterOTPViewController.xib
+++ b/rhb registration/Controllers/Pre Registration Screen/RHBPreRegisterOTPViewController.xib
@@ -16,6 +16,8 @@
                 <outlet property="countdownView" destination="dc5-DO-Znm" id="LIv-ub-clk"/>
                 <outlet property="didntReceiveLabel" destination="inD-8T-HJ2" id="seU-ie-4c9"/>
                 <outlet property="securityCodeInputView" destination="ktZ-4Z-EFU" id="wZ6-Nt-ueM"/>
+                <outlet property="verifyButton" destination="pih-kO-u5a" id="KLK-NC-YMf"/>
+                <outlet property="verifyButtonBottomConstraint" destination="n0x-ns-r5c" id="jFC-Jv-XNQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -113,7 +115,7 @@
                         <constraint firstAttribute="height" constant="10" id="B95-ov-0a2"/>
                     </constraints>
                 </imageView>
-                <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pih-kO-u5a">
+                <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pih-kO-u5a" customClass="RHBPrimaryButton" customModule="rhb_registration" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="622" width="375" height="45"/>
                     <color key="backgroundColor" red="0.16078431369999999" green="0.37254901959999998" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -132,7 +134,6 @@
             <constraints>
                 <constraint firstItem="dml-gx-L8P" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="2WJ-fH-tcQ"/>
                 <constraint firstItem="eQS-GX-DB9" firstAttribute="centerX" secondItem="dml-gx-L8P" secondAttribute="centerX" id="Dww-sG-cnz"/>
-                <constraint firstItem="pih-kO-u5a" firstAttribute="bottom" secondItem="dml-gx-L8P" secondAttribute="bottom" id="FaB-v5-LgL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="leading" secondItem="dml-gx-L8P" secondAttribute="leading" id="Mbt-AH-mQV"/>
                 <constraint firstItem="pih-kO-u5a" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="PXt-t6-WD4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dml-gx-L8P" secondAttribute="bottom" id="Y2s-QU-sup"/>
@@ -141,6 +142,7 @@
                 <constraint firstItem="pih-kO-u5a" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="g50-1Z-tak"/>
                 <constraint firstItem="dml-gx-L8P" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="gjq-ZT-4rK"/>
                 <constraint firstItem="dml-gx-L8P" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" priority="750" id="myG-Z2-OZV"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pih-kO-u5a" secondAttribute="bottom" id="n0x-ns-r5c"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
